# ProjetC

./: .gitignore  CMakeLists.txt  README.md  README.txt
clion/: .gitignore  CMakeLists.txt
docs/: doxygen.cfg  script_format.txt
include/: callfunction.h  draw_tools.h  ei_application.h  ei_draw.h  ei_event.h  ei_geometrymanager.h  ei_parser.h  ei_placer.h  ei_radiobutton.h  ei_toplevel.h  ei_types.h  ei_utils.h  ei_widget.h  ei_widgetclass.h  event.h  hw_interface.h  traverse_tools.h  utils.h
src/: README  draw_tools.c  ei_application.c  ei_buttonclass.c  ei_buttonclass.c.orig  ei_draw.c  ei_event.c  ei_frameclass.c  ei_geometrymanager.c  ei_placer.c  ei_radiobutton.c  ei_toplevel.c  ei_widget.c  ei_widgetclass.c  event.c  traverse_tools.c  utils.c
tests/: button.c  button_frame.c  frame.c  freq_counter.c  freq_counter.h  hello_world.c  minesweeper.c  minimal.c  parsing.c  parsing.txt  puzzle.c  radiobutton_test.c  test_button_frame.c  two048.c
